@@ -1,5 +1,9 @@
 2015-12-14  Gabriel Dos Reis  <gdr@axiomatics.org>
 
+	* ipr/interface: Add ipr::Auto type node.
+
+2015-12-14  Gabriel Dos Reis  <gdr@axiomatics.org>
+
 	* ipr/interface: 'auto' is no longer a storage-class specifier in
 	C++11 and up.
 
